fix horizontal scroll, add copyright in summary screen

--- a/src/app/screens/check-list/check-list.component.css
+++ b/src/app/screens/check-list/check-list.component.css
@@ -1,3 +1,8 @@
+:host {
+  display: block;
+  padding: 0 20px;
+}
+
 .check-item__list {
   list-style: none;
   padding: 0;
@@ -11,6 +16,7 @@
 
 .check-item__more-button-container {
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .filter-modal__option {
