--- a/src/app/screens/edit-check/edit-check.component.css
+++ b/src/app/screens/edit-check/edit-check.component.css
@@ -1,3 +1,8 @@
+:host {
+  display: block;
+  padding: 0 20px;
+}
+
 .edit-check__check-header {
   margin: 10px 0;
 }
