--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body {
   font-family: roboto, Arial;
   color: #707070;
   background: #ebebeb;
-  padding: 60px 20px;
+  padding: 60px 0;
   margin: 0;
 }
 
